# file-baker

./: config.yml  pyproject.toml
tests/: test_file_baker.py
