[tool.poetry]
name = "file-baker"
version = "0.1.0"
description = ""
authors = ["Yan Hu <adrian.hu.chn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
loguru = "^0.6.0"
PyYAML = "^6.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
